<resources>
    <string name="app_name">Tienbeerv2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="favoritos">Favoritos</string>
    <string name="dev_op">DEV OP</string>
    <string name="a_adir_cervezas">Añadir Cervezas</string>
    <string name="favoritosfragment">FavoritosFragment</string>
    <string name="anadirfragment">AnadirFragment</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="nombre">Nombre</string>
    <string name="name">Name</string>
    <string name="precio">Precio</string>
    <string name="tipo">Tipo</string>
    <string name="de_alcohol">% de alcohol</string>
    <string name="subir">SUBIR</string>
    <string name="_3_y_3">3 y 3</string>
    <string name="correo">Correo</string>
    <string name="crea_un_nuevo_six_pack">Crea un nuevo six pack</string>
    <string name="_3_3"><![CDATA[3 & 3]]></string>
    <string name="dejanos_sorprenderte">Dejanos sorprenderte</string>
    <string name="escoge_3_y_nosotros_3">Escoge 3 y nosotros 3</string>
    <string name="lo_hacemos_todo_por_ti">Lo hacemos todo por ti</string>
    <string name="crea_tu_propio_sixpack_desde_cero">Crea tu propio SixPack desde cero</string>
    <string name="_3_y3">3 y3</string>
    <string name="identificacion">Identificacion</string>
    <string name="telefono">Telefono</string>
</resources>