<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

     <item android:title="Menu">
        <menu>

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/cerveza"
            android:title="Arma tu SixPack" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
            <item
                android:id="@+id/nav_favoritos"
                android:icon="@drawable/ic_favorites"
                android:title="@string/favoritos" />

        </menu>
     </item>


        <item android:title="@string/dev_op">
            <menu>

                <item
                    android:id="@+id/nav_anadir"
                    android:icon="@drawable/ic_action_name"
                    android:title="@string/a_adir_cervezas" />

            </menu>
        </item>
    </group>
</menu>