<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="113dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nametxtSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/nombre"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tipotxtSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/tipo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nacionalidadtxtSel" />

            <TextView
                android:id="@+id/alcoholtxtSel"
                android:layout_width="101dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/de_alcohol"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tipotxtSel" />

            <TextView
                android:id="@+id/nacionalidadtxtSel"
                android:layout_width="99dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/nacionalidad"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nametxtSel" />

            <TextView
                android:id="@+id/preciotxtSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="205dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/precio"
                android:textColor="#FABD28"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/nacionalidadtxtSel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.493" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>